# ReplicateInstantNeuralMaterial

./: README.md  test.py  train.py  train_fp32.py  train_old.py  visualize_btf_plot.py
InstantNeuralMaterial_copy/: build_commad.txt  bunny_envmap.pyscene  bunny_neural_inference.py  bunny_with_render.py
InstantNeuralMaterial_copy/Source/Falcor/: CMakeLists.txt
InstantNeuralMaterial_copy/Source/Falcor/Core/: SampleApp.cpp
InstantNeuralMaterial_copy/Source/Falcor/Core/Program/: ProgramManager.cpp
InstantNeuralMaterial_copy/Source/Falcor/Scene/Camera/: Camera.h
InstantNeuralMaterial_copy/Source/Falcor/Scene/Displacement/: DisplacementMapping.slang
InstantNeuralMaterial_copy/Source/Falcor/Utils/Debug/: PixelDebug.cpp
InstantNeuralMaterial_copy/Source/Falcor/Utils/Math/: MathHelpers.slang
InstantNeuralMaterial_copy/Source/Falcor/Utils/Neural/: ActivationFunc.slang  MLP.cpp  (+8 more)
InstantNeuralMaterial_copy/Source/Mogwai/: MogwaiSettings.cpp
InstantNeuralMaterial_copy/Source/RenderPasses/: CMakeLists.txt  bunny_envmap.py
InstantNeuralMaterial_copy/Source/RenderPasses/NeuralMatRendering/: CMakeLists.txt  Display.cs.slang  MinimalPathTracer.rt.slang  NeuralMatRendering.cpp  NeuralMatRendering.h
InstantNeuralMaterial_copy/Source/RenderPasses/NeuralMatRendering/Tools/: BTFUtils.slang  Utils.cpp  Utils.h
InstantNeuralMaterial_copy/scripts/: HFTracing.py  HFTracingOptix.py  HFTracingPrism.py  HFTracingVideo.py
btf_extract_height/: CMakeLists.txt  btf-height.cpp
dataset/: btf_sampler.py
model/: triple_plane_mlp.py  triple_plane_mlp_old.py
utils/: btf_math.py
(+17 files in other folders)
